--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="swiper-button-prev"></div>
             </div>
         </div><!-- .swiper_container end -->
-    </main><!-- .main_visual end -->
+    </main><!-- .main end -->
 
     <!-- section01 start -->
     <section class="section01">
@@ -189,9 +189,11 @@
                         <p>유성구 슬유살롱에서 특별한 프로그램을 만나보세요.</p>
                     </div><!-- .text end -->
                     <div class="plus">
-                        <figure>
-                            <img src="img/more-btn.png" alt="">
-                        </figure>
+                        <a href="#">
+                            <figure>
+                                <img src="img/more-btn.png" alt="">
+                            </figure>
+                        </a>
                     </div><!-- .plus end -->
                 </div><!-- .title_wrap end -->
                 <div class="item_wrap">
@@ -282,9 +284,11 @@
                     <p>유성구 슬유살롱에서 특별한 프로그램을 만나보세요.</p>
                 </div><!-- .text end -->
                 <div class="plus">
-                    <figure>
-                        <img src="img/more-btn.png" alt="">
-                    </figure>
+                    <a href="#">
+                        <figure>
+                            <img src="img/more-btn.png" alt="">
+                        </figure>
+                    </a>
                 </div><!-- .plus end -->
             </div><!-- .title_wrap end -->
             <div class="content_wrap">
@@ -563,21 +567,40 @@
     <section class="section04">
         <ul>
             <li>
-                <a href="#"><img src="img/sns-icon.svg" alt=""></a>
+                <a href="#">
+                    <figure>
+                        <img src="img/b-sns-01.png" alt="">
+                        <img src="img/c-sns-icon01.png" alt="">
+                    </figure></a>
             </li>
             <li>
-                <a href="#"><img src="img/sns-icon.svg" alt=""></a>
+                <a href="#">
+                    <figure>
+                        <img src="img/b-sns-02.png" alt="">
+                        <img src="img/c-sns-icon02.png" alt="">
+                    </figure></a>
             </li>
             <li>
-                <a href="#"><img src="img/sns-icon.svg" alt=""></a>
+                <a href="#">
+                    <figure>
+                        <img src="img/b-sns-03.png" alt="">
+                        <img src="img/c-sns-icon03.png" alt="">
+                    </figure></a>
             </li>
             <li>
-                <a href="#"><img src="img/sns-icon.svg" alt=""></a>
+                <a href="#">
+                    <figure>
+                        <img src="img/b-sns-04.png" alt="">
+                        <img src="img/c-sns-icon04.png" alt="">
+                    </figure></a>
             </li>
             <li>
-                <a href="#"><img src="img/sns-icon.svg" alt=""></a>
+                <a href="#">
+                    <figure>
+                        <img src="img/b-sns-05.png" alt="">
+                        <img src="img/c-sns-icon05.png" alt="">
+                    </figure></a>
             </li>
-
         </ul>
     </section><!-- .section04 end -->
 
@@ -605,7 +628,7 @@
         var swiper = new Swiper(".mySwiper", {
             loop: true,
             autoplay: {
-                delay: 25000,
+                delay: 2500,
                 disableOnInteraction: false,
             },
             slidesPerView: 'auto',
@@ -623,7 +646,7 @@
         var swiper = new Swiper(".swiper02", {
             loop: true,
             autoplay: {
-                delay: 25000,
+                delay: 2500,
                 disableOnInteraction: false,
             },
             navigation: {
